--- a/index.htm
+++ b/index.htm
@@ -180,7 +180,7 @@
 		</div>
 		<div class="error-popup__title">
 			<h4>unable to locate</h4>
-			<p>loading defaults location</p>
+			<p>check geolocation settings<br>loading defaults location</p>
 		</div>
 	</div>
 
